[gd_scene load_steps=18 format=2]

[ext_resource path="res://Play.gd" type="Script" id=1]
[ext_resource path="res://Assets/more fonts/KiriFont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/40522.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/New folder/PNG/Number05.png" type="Texture" id=4]
[ext_resource path="res://Assets/New folder/PNG/Number04.png" type="Texture" id=5]
[ext_resource path="res://Assets/New folder/PNG/Number06.png" type="Texture" id=6]
[ext_resource path="res://Assets/New folder/PNG/Number27.png" type="Texture" id=7]
[ext_resource path="res://Assets/New folder/PNG/Number26.png" type="Texture" id=8]
[ext_resource path="res://Assets/New folder/PNG/Number25.png" type="Texture" id=9]
[ext_resource path="res://Assets/New folder/PNG/Number34.png" type="Texture" id=10]
[ext_resource path="res://Assets/New folder/PNG/Number35.png" type="Texture" id=11]
[ext_resource path="res://Assets/New folder/PNG/level_select/lock.png" type="Texture" id=12]
[ext_resource path="res://Assets/fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Assets/New folder/PNG/Icon16.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 10
outline_color = Color( 0.054902, 0.109804, 0.0862745, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 13 )

[node name="Play" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 0, -3.8147e-06 )
scale = Vector2( 0.170833, 0.15 )
texture = ExtResource( 3 )
centered = false

[node name="Sprite" type="Node2D" parent="."]
position = Vector2( 6, 6 )
scale = Vector2( 0.530208, 0.608333 )

[node name="Level1" type="Button" parent="Sprite"]
margin_left = 324.401
margin_top = 378.082
margin_right = 440.401
margin_bottom = 477.082
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2" type="Button" parent="Sprite"]
margin_left = 652.574
margin_top = 364.932
margin_right = 768.574
margin_bottom = 463.932
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="lock" type="Sprite" parent="Sprite/Level2"]
position = Vector2( 58.7076, 48.9959 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="Level3" type="Button" parent="Sprite"]
margin_left = 952.456
margin_top = 373.151
margin_right = 1068.46
margin_bottom = 472.151
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="lock" type="Sprite" parent="Sprite/Level3"]
position = Vector2( 59.2114, 48.0212 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="Level4" type="Button" parent="Sprite"]
margin_left = 1291.95
margin_top = 386.301
margin_right = 1407.95
margin_bottom = 485.301
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="lock" type="Sprite" parent="Sprite/Level4"]
position = Vector2( 58.7564, 49.8034 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="Level5" type="Button" parent="Sprite"]
margin_left = 324.401
margin_top = 647.671
margin_right = 440.401
margin_bottom = 746.671
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="lock" type="Sprite" parent="Sprite/Level5"]
position = Vector2( 56.1771, 51.0452 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="Level6" type="Button" parent="Sprite"]
margin_left = 692.181
margin_top = 619.726
margin_right = 808.181
margin_bottom = 718.726
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="lock" type="Sprite" parent="Sprite/Level6"]
position = Vector2( 57.2622, 49.5265 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="Level7" type="Button" parent="Sprite"]
margin_left = 1029.78
margin_top = 641.096
margin_right = 1145.78
margin_bottom = 740.096
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
icon = ExtResource( 10 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lock" type="Sprite" parent="Sprite/Level7"]
position = Vector2( 58.3886, 49.4113 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="Level8" type="Button" parent="Sprite"]
margin_left = 1318.35
margin_top = 657.534
margin_right = 1434.35
margin_bottom = 756.534
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
icon = ExtResource( 11 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="lock" type="Sprite" parent="Sprite/Level8"]
position = Vector2( 57.0402, 49.2741 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="Sprite"]
margin_left = 452.652
margin_top = 190.685
margin_right = 934.652
margin_bottom = 234.685
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 1, 0.392157, 1 )
custom_fonts/font = SubResource( 2 )
text = "Let,s Crack It!!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeButton" type="Button" parent="."]
margin_left = -4.87282
margin_top = -3.40138
margin_right = 111.127
margin_bottom = 92.5986
rect_scale = Vector2( 0.4, 0.4 )
custom_colors/font_color = Color( 0.0627451, 0.141176, 0.545098, 1 )
custom_colors/font_color_hover = Color( 0.14902, 0.156863, 0.305882, 1 )
custom_fonts/font = SubResource( 3 )
icon = ExtResource( 14 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Sprite/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="Sprite/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="Sprite/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="Sprite/Level4" to="." method="_on_Level4_pressed"]
[connection signal="pressed" from="Sprite/Level5" to="." method="_on_Level5_pressed"]
[connection signal="pressed" from="Sprite/Level6" to="." method="_on_Level6_pressed"]
[connection signal="pressed" from="Sprite/Level7" to="." method="_on_Level7_pressed"]
[connection signal="pressed" from="Sprite/Level8" to="." method="_on_Level8_pressed"]
[connection signal="pressed" from="HomeButton" to="." method="_on_HomeButton_pressed"]
